Fixed vertical alignment of avatars

--- a/assets/stylesheets/splash.styl
+++ b/assets/stylesheets/splash.styl
@@ -5,6 +5,7 @@
   width 144px
   cursor pointer
   overflow visible
+  vertical-align top
 
   vendor(user-select, none)
 
